tests/examples/importing/errors/multiple_defs/second_setup.si
service-registry ServiceRegistry{
    tool=eureka
    client_mode=False
    deployment {
        version="0.0.1"
        port=9092
        url="http://loc_reg2"
    }
}